<resources>
    <string name="app_name">LAEBProject</string>
    <string name="english">English</string>
    <string name="arbic">LAEBProject</string>
    <string name="invalideContryCode">Invalid number or Contry code.</string>
    <string name="invalidName">Invalid name.</string>
    <string name="invalidDistrictName">Invalid District name.</string>
    <string name="invalidGroundSize">Invalid ground size.</string>
    <string name="phone_number">Phone Number</string>
    <string name="contryCode">+966</string>
    <string name="continueText">CONTINUE</string>
    <string name="profileStr">PROFILE</string>
    <string name="full_name_hint">Full name</string>
    <string name="e_mail">E-Mail</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="invalid_security_code">The security code you entered is not correct please try again.</string>
    <string name="six_degit_code">Enter your 6 degit Code</string>
    <string name="code">Code</string>
    <string name="submit">SUBMIT</string>
    <string name="your_name">Your name</string>
    <string name="nick_name">Nick name</string>
    <string name="district">District</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="local_fourite_club">Local Fourite Club</string>
    <string name="international_fourite_club">International Fourite Club</string>
    <string name="are_you_a_player">Are you a Player</string>
    <string name="are_you_a_referee">Are you a Referee</string>
    <string name="your_team">Your Team</string>
    <string name="create_your_team">Create Your Team</string>
    <string name="mark_your_facilities_available_in_your_field">MARK YOUR FACILITIES AVAILABLE IN YOUR FIELD</string>
    <string name="water">Water</string>
    <string name="parking">Parking</string>
    <string name="floodlights">Floodlights</string>
    <string name="change_room">Change Room</string>
    <string name="football">Football</string>
    <string name="vests">Vests</string>
    <string name="wc">WC</string>
    <string name="stand_capacity">Stand Capacity</string>
    <string name="next">NEXT</string>

    <string-array name="array_accomodation">
        <item>6 X 6</item>
        <item>7 X 7</item>
        <item>8 X 8</item>
        <item>9 X 9</item>
        <item>10 X 10</item>
        <item>11 X 11</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_more_player">INVITE MORE PLAYER</string>
    <string name="schedule">Schedule</string>
    <string name="invitations">Invitations</string>
    <string name="recived">Recived</string>
    <string name="sent">Sent</string>
</resources>
